samples/_failures_safe/1761708748_6b5c66_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_740b0031.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_740b0031.c:147:17: error: expected expression at end of input
  147 |                 operator[1] =
      |                 ^~~~~~~~
./samples/SAFE/__tmp_740b0031.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_740b0031.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_740b0031.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_740b0031.c:147:17: error: expected declaration or statement at end of input
